Fix mobile layout issues: Contact form email/logo and Footer email/spacing

--- a/public/assets/scss/elements/_contact.scss
+++ b/public/assets/scss/elements/_contact.scss
@@ -17,12 +17,15 @@
     border-radius: 20px;
     background: var(--color-gray-2);
     padding: 20px 30px;
+
     @media (min-width: 576px) {
         padding: 80px 60px;
     }
+
     @media #{variables.$md-layout} {
         padding: 40px 40px;
     }
+
     @media #{variables.$sm-layout} {
         padding: 30px 20px;
     }
@@ -43,14 +46,17 @@
             font-size: 68px;
             line-height: 78px;
         }
+
         @media #{variables.$lg-layout} {
             font-size: 50px;
             line-height: 1.23;
         }
+
         @media #{variables.$md-layout} {
             font-size: 50px;
             line-height: 1.23;
         }
+
         @media #{variables.$sm-layout} {
             font-size: 32px;
             line-height: 1.2;
@@ -68,6 +74,7 @@
         .form-group {
             margin-bottom: 0;
             border: none !important;
+
             input {
                 background: transparent;
                 height: inherit;
@@ -77,6 +84,7 @@
                 font-weight: 600;
                 border-radius: 10px;
                 border: 2px solid var(--color-border);
+
                 &:focus {
                     border-color: var(--color-primary);
                 }
@@ -105,13 +113,13 @@
                     font-weight: 400;
                     line-height: 30px;
                 }
-                
+
                 &:focus {
                     border-color: var(--color-primary);
                 }
             }
 
-           
+
         }
     }
 
@@ -140,6 +148,7 @@
     padding: 50px 0;
     width: 100%;
     background: #0F0F0F;
+
     .contact-icon {
         width: 70px;
         height: 70px;
@@ -152,6 +161,7 @@
         margin-bottom: 25px;
         font-size: 30px;
     }
+
     .title {
         color: var(--color-heading);
         font-family: var(--font-primary);
@@ -161,6 +171,7 @@
         text-transform: capitalize;
         margin-bottom: 15px;
     }
+
     .para {
         color: var(--color-gray);
         font-family: var(--font-secondary);
@@ -185,9 +196,11 @@
             padding-right: 80px;
             position: sticky;
             top: 120px;
+
             @media #{variables.$md-layout} {
                 padding-right: 0;
             }
+
             @media #{variables.$sm-layout} {
                 padding-right: 0;
             }
@@ -196,33 +209,38 @@
 }
 
 
-#form-messages{
-    &.error{
+#form-messages {
+    &.error {
         color: var(--color-danger);
     }
-    &.success{
+
+    &.success {
         color: var(--color-success);
     }
 }
 
 
-.contact-area-left-portfolio-fixed{
-    .form-group{
+.contact-area-left-portfolio-fixed {
+    .form-group {
         margin-bottom: 20px;
     }
+
     input,
-    textarea{
+    textarea {
         background: var(--color-gray-2);
         border: 1px solid #0F0F0F;
-        &:focus{
+
+        &:focus {
             border: 1px solid var(--color-primary) !important;
         }
     }
-    input{
+
+    input {
         height: 70px;
         padding: 0 20px;
     }
-    textarea{
+
+    textarea {
         padding-top: 20px;
         padding-left: 20px;
         min-height: 193px;
@@ -230,5 +248,25 @@
         resize: none;
         padding: 15px;
         font-size: 16px;
+    }
+}
+
+// Custom styles for contact logo and links
+.contact-logo {
+    margin-left: 50px;
+    max-width: 100%;
+    height: auto;
+    padding: 0 20px;
+
+    @media #{variables.$sm-layout} {
+        margin-left: 0;
+        padding: 0;
+        width: 100%;
+    }
+}
+
+.ft-link-wrap {
+    a {
+        word-break: break-all;
     }
 }
